{
    "name": "VRInputActions",
    "maps": [
        {
            "name": "Default",
            "id": "6c02b9df-4ee3-4df4-b0fd-3997afa6234d",
            "actions": [
                {
                    "name": "LFlipper",
                    "type": "Value",
                    "id": "89ab98da-77e3-4950-bc7f-9f1f03a9314d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RFlipper",
                    "type": "Value",
                    "id": "34095f93-f875-4463-864b-4349cef81a19",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Plunger",
                    "type": "Button",
                    "id": "075cb102-f564-4486-8250-7dd73bd7ae35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftJoystick",
                    "type": "Value",
                    "id": "223de6f9-8abd-462b-8100-d75180030698",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightJoystick",
                    "type": "Value",
                    "id": "2439f92b-2cf9-4ad2-a0d4-ec0271592764",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightTrigger",
                    "type": "Value",
                    "id": "1046e562-b248-4c21-bb16-a83f3f9528b0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Trigger",
                    "type": "Value",
                    "id": "caec04b3-edfd-4ee7-8ac6-83e501dc891e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightGripPressed",
                    "type": "Value",
                    "id": "aeee339d-312b-455e-9258-5e01376dcd50",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftGripPressed",
                    "type": "Value",
                    "id": "6879e91d-51ba-456b-89da-4c25548c6b5b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightPrimary_Button",
                    "type": "Button",
                    "id": "9379b8e2-e4c9-4c47-a37f-2a94b79aaadb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftPrimary_Button",
                    "type": "Button",
                    "id": "f6867d17-017f-4de9-acf5-86300c73dc84",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b270f028-a9b4-4ac6-bb79-02edda748ea4",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "K&M",
                    "action": "LFlipper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99085299-0805-466d-816d-b01ff5b9f0f7",
                    "path": "<OculusTouchController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "LFlipper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52f4435b-b87b-4fbc-9b2f-ed34cd89498a",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "K&M",
                    "action": "RFlipper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5423ec89-bc23-498a-a978-371d10c158db",
                    "path": "<OculusTouchController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "RFlipper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b39d4ee-caa9-461c-b330-a6166f2a2c35",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "K&M",
                    "action": "Plunger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9ce401e-7572-4834-9a77-42c78947a98e",
                    "path": "<OculusTouchController>/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "Plunger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "153621e5-13a9-4a3a-b20c-3a565e935cd2",
                    "path": "<OculusTouchController>{LeftHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "LeftJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4be033f1-7394-444d-9f77-e2bb4d066dac",
                    "path": "<XRController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d00a5c5f-0889-481a-9eea-332b3e382051",
                    "path": "<OculusTouchController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "RightJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59c28c28-1597-4647-9829-cc390b381e8d",
                    "path": "<OculusTouchController>/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20447b5d-18bf-4e98-b3f0-618079248b1f",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "RightGripPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd11aca3-4867-46cb-b54d-81f50e5005a5",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "LeftGripPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8dbc3abd-72aa-4a7c-b30e-a05441ab1c11",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "RightPrimary_Button",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74f08699-cf7e-4160-9639-605fb4b6c1e8",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "LeftPrimary_Button",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "K&M",
            "bindingGroup": "K&M",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "VR",
            "bindingGroup": "VR",
            "devices": [
                {
                    "devicePath": "<OpenXRHmd>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<OculusTouchController>{LeftHand}",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<OculusTouchController>{RightHand}",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}